--- a/src/css/marker.css
+++ b/src/css/marker.css
@@ -19,10 +19,10 @@
 }
 
 .marker-properties th {
-  width: 33.3333%;
   min-width: 100px;
   white-space: nowrap;
   border: 1px solid #ccc;
+  font-weight: 500;
 }
 
 .marker-properties td {
@@ -61,11 +61,17 @@ datalist {
   height: 150px;
 }
 
+.tabs-ui select {
+  width: 100%;
+  padding: 0 16px;
+  text-align: center;
+}
+
 /* Tabs
 ------------------------------------------------------- */
 .tabs-ui {
   position: relative;
-  width: 250px;
+  width: 320px;
 }
 
 .tabs-ui > * {
